# UPS-semestralka

./: UPS-semestralka.zargo  UPS-semestralka.zargo~  gitAddAll.sh  readme.md  seneterror.h
code/client/: pom.xml
code/client/src/main/java/org/valesz/ups/common/: Constraits.java  TimerThread.java  Utils.java
code/client/src/main/java/org/valesz/ups/controller/: GameController.java  LoginController.java  ViewController.java
code/client/src/main/java/org/valesz/ups/main/: MainApp.java
code/client/src/main/java/org/valesz/ups/model/: LoginData.java
code/client/src/main/java/org/valesz/ups/network/: AbstractReceiver.java  ConnectionService.java  ExitService.java  MessageReceiver.java  MessageSender.java  NickService.java  OkService.java  TcpClient.java  (+7 more)
code/client/src/main/resources/: errors.properties  log4j2.properties
code/client/src/test/java/org/valesz/ups/: AppTest.java
code/server/: .sconsign.dblite  .server.c.swp  CMakeLists.txt  SConstruct  common.c  common.h  nick_val.c  nick_val.h  server  server.c  slog.c  slog.h  testClient.c
code/server/common/: common.c  common.h  game.h  message.c  message.h  nick_val.c  nick_val.h  seneterror.h  slog.c  slog.h
code/server/core/: game.c  game.h  limits.h  parallel.c  parallel.h  player.c  player.h  queue.c  queue.h  server.c
doc/: .~lock.operace.ods#  dokumentace.aux  dokumentace.tex  operace.ods
doc/img/: .~lock.klient_h_smycka.odg#  .~lock.obsluha.odg#  .~lock.server_h_smycka.odg#  klient_h_smycka.eps  klient_h_smycka.odg  obsluha.eps  obsluha.odg  obsluha.xpm  server_h_smycka.eps  server_h_smycka.odg
(+46 files in other folders)
